/**
 * @author ChenWeihan
 * @create 2021-12-04 16:20
 */
public interface UserHandle {
    void login(User user);
    void register(User user);
}
